Thu Mar  4 14:13:36 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:

          Proper ORB destruction in case of error.

Thu Mar  4 13:57:48 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/EM_Launcher.h:
        * DAnCE/Plan_Launcher/NM_Launcher.h:
        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:

          Fixed comments from Johnny.

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl_T.h:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.h:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc:

          Renamed these files to have _T suffix.

Thu Mar  4 13:30:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/Convert_Plan/Convert_Plan_Impl.cpp:

          Fixed an error-checking problem whereby an invalid filename
          didn't result in function exit properly.  Thanks to Johnny
          Willemsen for pointing this out.

Thu Mar  4 13:27:35 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/EM_Launcher.h:

          Fuzz fix.

Thu Mar  4 13:11:25 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test_cdr.pl:
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test_cdr.pl:
        * bin/ciao_tests.lst:

          Added a test which 1) converts XML plans to CDR with
          dance_convert_plan, and 2) deploys that plan.

Thu Mar  4 13:08:02 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test.pl:

          Ported to use dance_plan_launcher directly.

        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl: